modulo3/ingress/ingress-todo-front.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
  - host: lc-todo.edu
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front-service
            port:
              number: 80
